Issues-313:add endpoint to pull all members for a group
